--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
     ],
     "require": {
         "php": "^7.0",
+        "ext-json": "*",
+        "ext-curl": "*",
         "psr/log": "~1.0",
         "elasticsearch/elasticsearch": "^6.0"
     },
